# graph-decomposition-reassembling

./: .flake8  .gitignore  LICENSE  README.md  decomposition.py  env.yaml  pyproject.toml  reassemble.py  run_moldr.py
data/building_blocks/ZINC/: s10000_l2.csv  s5000_l2.csv
data/building_blocks/guacamol/: guacamol_s1000_l2.csv
data/building_blocks/test/: guacamol_s1000_l2.csv
data/building_blocks/zinc/: s100_l2.csv  zinc_filter_s1000l7.csv
data/results/paper/: plogp.txt  qed.txt
data/zinc/: test.txt  vocab.csv
examples/: decomposition.ipynb  distribution_vis.ipynb  reassembling.ipynb
gspan_mining/: graph.py  gspan.py
libs/: base.py  chemutils.py  gspan_utils.py  property_simulator.py  reassemble.py  sasscore.py  search_tree.py
mi-collections/: .flake8  .gitignore  .pre-commit-config.yaml  README.md  setup.py
mi-collections/mi_collections/: chemutils.py  graph_utils.py  molgraph.py
mi-collections/mi_collections/ecfp/: features.py  (+1 more)
mi-collections/tests/: mol2vec_test.py  tests.py
moldr/: chemutils.py  config.py  env.py  objective.py  sascore.py  train.py  utils.py
moldr/core/: decompose.py  env.py  molgraph.py  moltree.py  props.py  reassemble.py  search.py
moldr/gspan/: __init__.py  __main__.py  config.py  graph.py  gspan.py  main.py  utils.py
moldr/mol2vec/: __init__.py  features.py  helper.py  model.py
outputs/results/: Celecoxib rediscovery transition.csv  Celecoxib rediscovery.csv  Osimertinib MPO.csv  Ranolazine MPO.csv  aripiprazole_result.csv  logP_8.0.csv  plogp.csv  qed.csv
tests/: test_env.py  test_gspan.py  test_mol2vec.py
(+22 files in other folders)
