[project]
name = "graph-decomposition-reassembling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.13"
dependencies = [
    "gensim>=4.3.3",
    "guacamol>=0.5.5",
    "gymnasium>=1.0.0",
    "joblib>=1.5.1",
    "networkx>=3.4.2",
    "ray[rllib]>=2.47.1",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "wandb>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.12.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["moldr*"]

